--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <img src="./images/image.jpeg" alt="Фото Жак-Ив Кусто" class="profile__avatar">
         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
-          <button class="profile__edit-button">
+          <button type="button" class="profile__edit-button" aria-label="Кнопка редактировать">
             <img src="./images/botton_pen.svg" alt="Ручка" class="profile__pen">
           </button>
           <p class="profile__activities">Исследователь океана</p>
         </div>
-        <div class="profile__add-button">
+        <button type="button" class="profile__add-button" aria-label="Кнопка добавления картинки">
           <img src="./images/botton_plus.svg" alt="Плюс" class="profile__plus">
-        </div>
+        </button>
       </section>
       <section class="cards content__section">
         <ul class="cards__list">
@@ -31,42 +31,42 @@
             <img src="./images/karachaevsk.jpeg" alt="Здание" class="item__image">
             <div class="item__info">
               <h2 class="item__name">Карачаевск</h2>
-              <div class="item__like item__like_active"></div>
+              <button type="button" class="item__like item__like_active_black" aria-label="Кнопка лайка"></button>
             </div>
           </li>
           <li class="item">
             <img src="./images/gora_elbrus.jpeg" alt="Гора Эльбрус" class="item__image">
             <div class="item__info">
               <h2 class="item__name">Гора Эльбрус</h2>
-              <div class="item__like item__like_active"></div>
+              <button type="button" class="item__like item__like_active_black" aria-label="Кнопка лайка"></button>
             </div>
           </li>
           <li class="item">
             <img src="./images/dombai.jpeg" alt="Снежная гора" class="item__image">
             <div class="item__info">
               <h2 class="item__name">Домбай</h2>
-              <div class="item__like item__like_active"></div>
+              <button type="button" class="item__like item__like_active_black" aria-label="Кнопка лайка"></button>
             </div>
           </li>
           <li class="item">
             <img src="./images/gora_elbrus.jpeg" alt="Гора Эльбрус" class="item__image">
             <div class="item__info">
               <h2 class="item__name">Гора Эльбрус</h2>
-              <div class="item__like item__like_active"></div>
+              <button type="button" class="item__like item__like_active_black" aria-label="Кнопка лайка"></button>
             </div>
           </li>
           <li class="item">
             <img src="./images/dombai.jpeg" alt="Снежная гора" class="item__image">
             <div class="item__info">
               <h2 class="item__name">Домбай</h2>
-              <div class="item__like item__like_active"></div>
+              <button type="button" class="item__like item__like_active_black" aria-label="Кнопка лайка"></button>
             </div>
           </li>
           <li class="item">
             <img src="./images/karachaevsk.jpeg" alt="Здание" class="item__image">
             <div class="item__info">
               <h2 id="'karachaevsk" class="item__name">Карачаево-Черкесия</h2>
-              <div class="item__like item__like_active"></div>
+              <button type="button" class="item__like item__like_active_black" aria-label="Кнопка лайка"></button>
             </div>
           </li>
         </ul>
@@ -77,19 +77,19 @@
         <p class="footer__text">&copy; 2022 Mesto Russia</p>
       </div>
     </footer>
-    <section class="popup popup_opened">
-        <div class="popup__container">
-          <div class="popup__close"></div>
-            <div class="popup__content">
-                <h2 class="popup__title">Редактировать профиль</h2>
-                <form class="popup__input-container">
-                  <input type="text" class="popup__name" placeholder="Жак-Ив Кусто">
-                  <input type="text" class="popup__aboutme" placeholder="Исследователь океана">
-                </form>
-                  <button class="popup__button">Сохранить</button>
-            </div>
+    <section class="popup">
+      <div class="popup__container">
+        <button type="button" class="popup__close" aria-label="Кнопка закрытия попапа"></button>
+        <div class="popup__content">
+          <h2 class="popup__title">Редактировать профиль</h2>
+          <form name="editform" class="popup__form">
+            <input name="name" type="text" class="popup__input popup__input_type_name" placeholder="Введите имя">
+            <input name="job" type="text" class="popup__input popup__input_type_aboutme" placeholder="Введите профессию">
+            <button type="submit" class="popup__button">Сохранить</button>
+          </form>
         </div>
-      </section>
-      <script src="./scripts/index.js"></script>
+      </div>
+    </section>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
