--- a/index.html
+++ b/index.html
@@ -25,51 +25,8 @@
           <img src="./images/botton_plus.svg" alt="Плюс" class="profile__plus">
         </button>
       </section>
-      <section class="cards content__section">
-        <ul class="cards__list">
-          <li class="item">
-            <img src="./images/karachaevsk.jpeg" alt="Здание" class="item__image">
-            <div class="item__info">
-              <h2 class="item__name">Карачаевск</h2>
-              <button type="button" class="item__like item__like_active_black" aria-label="Кнопка лайка"></button>
-            </div>
-          </li>
-          <li class="item">
-            <img src="./images/gora_elbrus.jpeg" alt="Гора Эльбрус" class="item__image">
-            <div class="item__info">
-              <h2 class="item__name">Гора Эльбрус</h2>
-              <button type="button" class="item__like item__like_active_black" aria-label="Кнопка лайка"></button>
-            </div>
-          </li>
-          <li class="item">
-            <img src="./images/dombai.jpeg" alt="Снежная гора" class="item__image">
-            <div class="item__info">
-              <h2 class="item__name">Домбай</h2>
-              <button type="button" class="item__like item__like_active_black" aria-label="Кнопка лайка"></button>
-            </div>
-          </li>
-          <li class="item">
-            <img src="./images/gora_elbrus.jpeg" alt="Гора Эльбрус" class="item__image">
-            <div class="item__info">
-              <h2 class="item__name">Гора Эльбрус</h2>
-              <button type="button" class="item__like item__like_active_black" aria-label="Кнопка лайка"></button>
-            </div>
-          </li>
-          <li class="item">
-            <img src="./images/dombai.jpeg" alt="Снежная гора" class="item__image">
-            <div class="item__info">
-              <h2 class="item__name">Домбай</h2>
-              <button type="button" class="item__like item__like_active_black" aria-label="Кнопка лайка"></button>
-            </div>
-          </li>
-          <li class="item">
-            <img src="./images/karachaevsk.jpeg" alt="Здание" class="item__image">
-            <div class="item__info">
-              <h2 id="'karachaevsk" class="item__name">Карачаево-Черкесия</h2>
-              <button type="button" class="item__like item__like_active_black" aria-label="Кнопка лайка"></button>
-            </div>
-          </li>
-        </ul>
+      <section class="cards content__section" aria-label="Блок с карточками">
+        <ul class="cards__list"></ul>
       </section>
     </main>
     <footer class="footer">
@@ -90,6 +47,36 @@
         </div>
       </div>
     </section>
+    <section class="popup popup_add-image">
+      <div class="popup__container">
+        <button type="button" class="popup__close popup__close_type_add-image" aria-label="Кнопка закрытия попапа"></button>
+        <div class="popup__content">
+          <h2 class="popup__title">Новое место</h2>
+          <form name="editform" class="popup__form popup__form_create-card">
+            <input name="title" type="text" class="popup__input popup__input_type_title" placeholder="Название">
+            <input name="link" type="text" class="popup__input popup__input_type_link" placeholder="Ссылка на картинку">
+            <button type="submit" class="popup__button popup__button_type_add-image">Создать</button>
+          </form>
+        </div>
+      </div>
+    </section>
+    <section class="popup popup_open-image">
+      <div class="popup__image-container">
+        <button type="button" class="popup__close-image" aria-label="Кнопка закрытия картинки"></button>
+        <img src="#" alt="Картинка" class="popup__image">
+        <h2 class="popup__name">Имя картинки</h2>
+      </div>
+    </section>
+    <template class="card-template">
+      <li class="item">
+        <button type="button" class="item__trash" aria-label="Кнопка удаления"></button>
+        <img src="#" alt="Картинка" class="item__image">
+        <div class="item__info">
+          <h2 class="item__name"></h2>
+          <button type="button" class="item__like" aria-label="Кнопка лайка"></button>
+        </div>
+      </li>
+    </template>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
