--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
       </li>
     </template>
-    <script src="./scripts/index.js"></script>
-    <script src="./scripts/validate.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
+    <!-- <script src="./scripts/validate.js"></script> -->
   </body>
 </html>
