--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <input name="job" type="text" id="job" class="popup__input popup__input_type_aboutme" placeholder="Введите профессию" required minlength="2" maxlength="200">
               <span class="job-error"></span>
             </label>
-            <button type="submit" class="popup__button popup__button_disabled popup__button_type_edit-profile">Сохранить</button>
+            <button type="submit" class="popup__button popup__button_type_edit-profile">Сохранить</button>
           </form>
         </div>
       </div>
