--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p class="footer__text">&copy; 2022 Mesto Russia</p>
       </div>
     </footer>
-    <section class="popup profile-popup">
+    <div class="popup profile-popup">
       <div class="popup__container">
         <button type="button" class="popup__close popup__close_type_edit-form" aria-label="Кнопка закрытия попапа"></button>
         <div class="popup__content">
@@ -52,8 +52,8 @@
           </form>
         </div>
       </div>
-    </section>
-    <section class="popup popup_add-image">
+    </div>
+    <div class="popup popup_add-image">
       <div class="popup__container">
         <button type="button" class="popup__close popup__close_type_add-image" aria-label="Кнопка закрытия попапа"></button>
         <div class="popup__content">
@@ -67,18 +67,18 @@
               <input name="link" type="url" id="link-image" class="popup__input popup__input_type_link" placeholder="Ссылка на картинку" required>
               <span class="link-image-error"></span>
             </label>
-            <button type="submit" class="popup__button popup__button_type_add-image popup__button_disabled">Создать</button>
+            <button type="submit" class="popup__button popup__button_type_add-image">Создать</button>
           </form>
         </div>
       </div>
-    </section>
-    <section class="popup popup_open-image">
+    </div>
+    <div class="popup popup_open-image">
       <div class="popup__image-container">
         <button type="button" class="popup__close popup__close-image" aria-label="Кнопка закрытия картинки"></button>
         <img src="#" alt="Картинка" class="popup__image">
         <h2 class="popup__name">Имя картинки</h2>
       </div>
-    </section>
+    </div>
     <template class="card-template">
       <li class="item">
         <button type="button" class="item__trash" aria-label="Кнопка удаления"></button>
@@ -90,6 +90,5 @@
       </li>
     </template>
     <script type="module" src="./scripts/index.js"></script>
-    <!-- <script src="./scripts/validate.js"></script> -->
   </body>
 </html>
