--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./pages/index.css">
+    <!-- <link rel="stylesheet" href="./pages/index.css"> -->
     <title>Mesto</title>
   </head>
   <body class="page">
     <header class="header">
-      <img src="./images/image.svg" alt="Лого Место" class="header__logo">
+      <img src="<%=require(./images/image.svg)%>" alt="Лого Место" class="header__logo">
     </header>
     <main class="content page__content">
       <section class="profile content__section">
@@ -89,6 +89,6 @@
         </div>
       </li>
     </template>
-    <script type="module" src="./scripts/index.js"></script>
+    <!-- <script type="module" src="../dist/main.js"></script> -->
   </body>
 </html>
