--- a/src/index.html
+++ b/src/index.html
@@ -1,92 +1,92 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mesto</title>
-</head>
-<body class="page">
-<header class="header">
-    <img src="<%=require('./images/image.svg')%>" alt="Лого Место" class="header__logo">
-</header>
-<main class="content page__content">
-    <section class="profile content__section">
+  </head>
+  <body class="page">
+    <header class="header">
+      <img src="<%=require('./images/image.svg')%>" alt="Лого Место" class="header__logo">
+    </header>
+    <main class="content page__content">
+      <section class="profile content__section">
         <img src="<%=require('./images/image.jpg')%>" alt="Фото Жак-Ив Кусто" class="profile__avatar">
         <div class="profile__info">
-            <h1 class="profile__name">Жак-Ив Кусто</h1>
-            <button type="button" class="profile__edit-button" aria-label="Кнопка редактировать">
-                <img src="<%=require('./images/botton_pen.svg')%>" alt="Ручка" class="profile__pen">
-            </button>
-            <p class="profile__activities">Исследователь океана</p>
+          <h1 class="profile__name">Жак-Ив Кусто</h1>
+          <button type="button" class="profile__edit-button" aria-label="Кнопка редактировать">
+            <img src="<%=require('./images/botton_pen.svg')%>" alt="Ручка" class="profile__pen">
+          </button>
+          <p class="profile__activities">Исследователь океана</p>
         </div>
         <button type="button" class="profile__add-button" aria-label="Кнопка добавления картинки">
-            <img src="<%=require('./images/botton_plus.svg')%>" alt="Плюс" class="profile__plus">
+          <img src="<%=require('./images/botton_plus.svg')%>" alt="Плюс" class="profile__plus">
         </button>
-    </section>
-    <section class="cards content__section" aria-label="Блок с карточками">
+      </section>
+      <section class="cards content__section" aria-label="Блок с карточками">
         <ul class="cards__list"></ul>
-    </section>
-</main>
-<footer class="footer">
-    <div class="footer__copyright">
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer__copyright">
         <p class="footer__text">&copy; 2022 Mesto Russia</p>
-    </div>
-</footer>
-<div class="popup profile-popup">
-    <div class="popup__container">
+      </div>
+    </footer>
+    <div class="popup profile-popup">
+      <div class="popup__container">
         <button type="button" class="popup__close popup__close_type_edit-form" aria-label="Кнопка закрытия попапа"></button>
         <div class="popup__content">
-            <h2 class="popup__title">Редактировать профиль</h2>
-            <form name="editform" class="popup__form popup__form_edit-form" novalidate>
-                <label class="popup__field">
-                    <input name="name" id="name-card" type="text" class="popup__input popup__input_type_name" placeholder="Введите имя" required minlength="2" maxlength="40">
-                    <span class="name-card-error"></span>
-                </label>
-                <label class="popup__field">
-                    <input name="job" type="text" id="job" class="popup__input popup__input_type_aboutme" placeholder="Введите профессию" required minlength="2" maxlength="200">
-                    <span class="job-error"></span>
-                </label>
-                <button type="submit" class="popup__button popup__button_type_edit-profile">Сохранить</button>
-            </form>
+          <h2 class="popup__title">Редактировать профиль</h2>
+          <form name="editform" class="popup__form popup__form_edit-form" novalidate>
+            <label class="popup__field">
+              <input name="name" id="name-card" type="text" class="popup__input popup__input_type_name" placeholder="Введите имя" required minlength="2" maxlength="40">
+              <span class="name-card-error"></span>
+            </label>
+            <label class="popup__field">
+              <input name="job" type="text" id="job" class="popup__input popup__input_type_aboutme" placeholder="Введите профессию" required minlength="2" maxlength="200">
+              <span class="job-error"></span>
+            </label>
+            <button type="submit" class="popup__button popup__button_type_edit-profile">Сохранить</button>
+          </form>
         </div>
+      </div>
     </div>
-</div>
-<div class="popup popup_add-image">
-    <div class="popup__container">
+    <div class="popup popup_add-image">
+      <div class="popup__container">
         <button type="button" class="popup__close popup__close_type_add-image" aria-label="Кнопка закрытия попапа"></button>
         <div class="popup__content">
-            <h2 class="popup__title">Новое место</h2>
-            <form name="createform" class="popup__form popup__form_create-card" novalidate>
-                <label class="popup__field">
-                    <input name="title" type="text" id="title-image" class="popup__input popup__input_type_title" placeholder="Название" required minlength="2" maxlength="30">
-                    <span class="title-image-error"></span>
-                </label>
-                <label class="popup__field">
-                    <input name="link" type="url" id="link-image" class="popup__input popup__input_type_link" placeholder="Ссылка на картинку" required>
-                    <span class="link-image-error"></span>
-                </label>
-                <button type="submit" class="popup__button popup__button_type_add-image">Создать</button>
-            </form>
+          <h2 class="popup__title">Новое место</h2>
+          <form name="createform" class="popup__form popup__form_create-card" novalidate>
+            <label class="popup__field">
+              <input name="title" type="text" id="title-image" class="popup__input popup__input_type_title" placeholder="Название" required minlength="2" maxlength="30">
+              <span class="title-image-error"></span>
+            </label>
+            <label class="popup__field">
+              <input name="link" type="url" id="link-image" class="popup__input popup__input_type_link" placeholder="Ссылка на картинку" required>
+              <span class="link-image-error"></span>
+            </label>
+            <button type="submit" class="popup__button popup__button_type_add-image">Создать</button>
+          </form>
         </div>
+      </div>
     </div>
-</div>
-<div class="popup popup_open-image">
-    <div class="popup__image-container">
+    <div class="popup popup_open-image">
+      <div class="popup__image-container">
         <button type="button" class="popup__close popup__close-image" aria-label="Кнопка закрытия картинки"></button>
-        <img src="" alt="Картинка" class="popup__image">
+        <img src="#" alt="Картинка" class="popup__image">
         <h2 class="popup__name">Имя картинки</h2>
+      </div>
     </div>
-</div>
-<template class="card-template">
-    <li class="item">
+    <template class="card-template">
+      <li class="item">
         <button type="button" class="item__trash" aria-label="Кнопка удаления"></button>
-        <img src="" alt="Картинка" class="item__image">
+        <img src="#" alt="Картинка" class="item__image">
         <div class="item__info">
-            <h2 class="item__name"></h2>
-            <button type="button" class="item__like" aria-label="Кнопка лайка"></button>
+          <h2 class="item__name"></h2>
+          <button type="button" class="item__like" aria-label="Кнопка лайка"></button>
         </div>
-    </li>
-</template>
-</body>
+      </li>
+    </template>
+  </body>
 </html>
