--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
       <li class="item">
         <button type="button" class="item__trash" aria-label="Кнопка удаления"></button>
         <img src="#" alt="Картинка" class="item__image">
-        <div class="item__info0">
+        <div class="item__info">
           <h2 class="item__name"></h2>
           <button type="button" class="item__like" aria-label="Кнопка лайка"></button>
         </div>
