--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
           <h2 class="popup__title">Новое место</h2>
           <form name="createform" class="popup__form popup__form_create-card" novalidate>
             <label class="popup__field">
-              <input name="title" type="text" id="title-image" class="popup__input popup__input_type_title" placeholder="Название" required minlength="2" maxlength="30">
+              <input name="name" type="text" id="title-image" class="popup__input popup__input_type_title" placeholder="Название" required minlength="2" maxlength="30">
               <span class="title-image-error"></span>
             </label>
             <label class="popup__field">
