--- a/src/index.html
+++ b/src/index.html
@@ -44,8 +44,8 @@
               <span class="name-card-error"></span>
             </label>
             <label class="popup__field">
-              <input name="job" type="text" id="job" class="popup__input popup__input_type_aboutme" placeholder="Введите профессию" required minlength="2" maxlength="200">
-              <span class="job-error"></span>
+              <input name="about" type="text" id="about" class="popup__input popup__input_type_aboutme" placeholder="Введите профессию" required minlength="2" maxlength="200">
+              <span class="about-error"></span>
             </label>
             <button type="submit" class="popup__button popup__button_type_edit-profile">Сохранить</button>
           </form>
